# gosleep

./: .gitignore  .golangci.yml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  TODO.md  cicd.example.yaml  cmd_init.go  go.mod  go.sum  main.go  timer.py
.gitea/workflows/: ci.yaml  release.yaml
.github/workflows/: cicd.yaml
config/: config.go  defaults.go  types.go
engine/: executor.go  stages.go  timer.go
history/: history.go  stats.go
modules/: module.go  registry.go
modules/brightness/: brightness.go
modules/custom/: custom.go
modules/kill/: kill.go
modules/lock/: lock.go
modules/media/: media.go
modules/mute/: mute.go
modules/notify/: notify.go
modules/script/: script.go
modules/sound/: sound.go
modules/workspace/: workspace.go
profiles/: manager.go  profile.go
src/: main.rs
tui/: app.go  keybinds.go  qr.go  styles.go  widgets.go
