[package]
name = "gosleep-timer"
version = "1.2.2"
authors = ["forust"]
edition = "2024"
rust-version = "1.88"
description = "Terminal sleep timer for Linux desktop actions, with YAML config and a Rust TUI"
license = "MIT"
repository = "https://gitea.forust.xyz/forust/gosleep"
homepage = "https://gitea.forust.xyz/forust/gosleep"
readme = "README.md"
keywords = ["timer", "tui", "linux", "desktop", "sleep"]
categories = ["command-line-utilities"]

[[bin]]
name = "gosleep-timer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30.2"
serde = { version = "1.0", features = ["derive"] }
noyalib = "0.0.13"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
